database.properties updated for server configuration

--- a/src/resources/database.properties
+++ b/src/resources/database.properties
@@ -1,18 +1,26 @@
 sinan.database.0.distroKey = 01
 sinan.database.0.server = localhost
-sinan.database.0.dbName = sinan_RezerwacjeBiletow_1
-sinan.database.0.user = root
-sinan.database.0.password =
+sinan.database.0.dbName = sinanser_booking_1
+sinan.database.0.user = sinanser_bk_usr
+sinan.database.0.password = }bQ.G5tQ-=cz
 sinan.database.0.driver = com.mysql.jdbc.Driver
 sinan.database.0.connectionString = jdbc:mysql://{server}:3306/{database}?useUnicode=true&characterEncoding=utf8
 
 sinan.database.1.distroKey = 02
 sinan.database.1.server = localhost
-sinan.database.1.dbName = sinan_RezerwacjeBiletow_2
-sinan.database.1.user = root
-sinan.database.1.password =
+sinan.database.1.dbName = sinanser_booking_2
+sinan.database.1.user = sinanser_bk_usr
+sinan.database.1.password = }bQ.G5tQ-=cz
 sinan.database.1.driver = com.mysql.jdbc.Driver
 sinan.database.1.connectionString = jdbc:mysql://{server}:3306/{database}?useUnicode=true&characterEncoding=utf8
+
+sinan.database.2.distroKey = 11
+sinan.database.2.server = localhost
+sinan.database.2.dbName = sinanser_booking_psgre
+sinan.database.2.user = sinanser_bk_usr
+sinan.database.2.password = }bQ.G5tQ-=cz
+sinan.database.2.driver = org.postgresql.Driver
+sinan.database.2.connectionString = jdbc:postgresql://{server}:5432/{database}
 
 
 
