--- a/src/resources/database.properties
+++ b/src/resources/database.properties
@@ -14,5 +14,13 @@ sinan.database.1.password =
 sinan.database.1.driver = com.mysql.jdbc.Driver
 sinan.database.1.connectionString = jdbc:mysql://{server}:3306/{database}?useUnicode=true&characterEncoding=utf8
 
+## PostgreSQL is only configured server (server-release branch),
+# however if you have postgresql installed on your local machine, you can uncomment these lines
 
-
+#sinan.database.2.distroKey = 11
+#sinan.database.2.server = localhost
+#sinan.database.2.dbName = sinanser_booking_psgre
+#sinan.database.2.user = sinanser_bk_usr
+#sinan.database.2.password = }bQ.G5tQ-=cz
+#sinan.database.2.driver = org.postgresql.Driver
+#sinan.database.2.connectionString = jdbc:postgresql://{server}:5432/{database}
